# SupplyLine-MRO-Suite

./: .bandit  .dockerignore  .env.aws.example  .env.example  .env.gcp  .env.gcp.example  .eslintignore  .gcloudignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  ADMIN_DASHBOARD_FIX_SUMMARY.md  AIRCRAFT_TYPE_MANAGEMENT_IMPLEMENTATION.md  APPLY_PR_312_FIXES.md  AUTHENTICATION_E2E_FIXES_SUMMARY.md  AUTH_CONSOLIDATION_SUMMARY.md  AWS_DEPLOYMENT_GUIDE.md  BARCODE_QR_ENHANCEMENT_SUMMARY.md  BARCODE_QR_USAGE_GUIDE.md  BROWSER_TEST_RESULTS.md  CHANGELOG.md  CI_CD_FIXES_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONCURRENT_TESTING_COMPLETION_SUMMARY.md  CONCURRENT_TESTING_HANDOFF.md  CYCLE_COUNT_SYSTEM_README.md  DASHBOARD_E2E_FIXES_SUMMARY.md  DATABASE_PERSISTENCE_SUMMARY.md  DATABASE_RESOLUTION_SUMMARY.md  DEBUG_TEST_REMOVAL_SUMMARY.md  DEPENDENCY_UPGRADE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GCP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_REPORT.md  DOCKER_README.md  (+222 more)
.claude/: settings.local.json
SupplyLine-MRO-Suite-Portable-Clean/: Launch-SupplyLine.bat  README.md
aws/: generate-secure-keys.sh
backend/: .coveragerc  .flake8  Dockerfile  FLAKE8_FIXES_SUMMARY.md  Makefile  Procfile  README.md  TESTING.md  TEST_QUICK_REFERENCE.md  add_email_column.py  add_lot_lineage_fields.py  add_materials_users.py  add_test_users.py  app.py  aws_db_init.py  check-users-task-overrides.json  check_admin.py  check_chem001.py  check_database_datetime_fields.py  check_datetime_corruption.py  check_db.py  check_users.py  (+152 more)
(+808 files in other folders)
